fix: update footer background colors for improved visibility

--- a/src/components/StaticComponents/Footer/Footer.css
+++ b/src/components/StaticComponents/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #181611;
+  background-color: #080b11;
   color: white;
   margin-top: 3rem;
   width: 100%;
@@ -82,7 +82,7 @@
 }
 
 .footer-button {
-  background-color: #454542;
+  background-color: #4b5563;
   color: white;
   padding: 0.5rem 1rem;
   border-radius: 0.375rem;
